# locked-in

./: .env.example  .gitignore  Anchor.toml  App.tsx  README.md  app.json  eas.json  index.js  metro.config.js  package-lock.json  package.json  tailwind.config.js
backend/: .env.example  README.md  package-lock.json  package.json
backend/openapi/: lesson-api-v1.yaml
backend/sql/: 0003_auth_progress_hardening.sql  0004_verified_completion_events.sql  0005_user_course_runtime_state.sql  0006_fuel_burn_cycle_receipts.sql  0007_saver_consequence_runtime.sql  0016_harvest_result_yield_splitter_publish_status.sql  0017_unlock_receipts.sql  0018_leaderboard_snapshots.sql
backend/src/: config.mjs
docs/: 01-wallet-connection.md  02-lesson-api.md  03-fuel.md  05-yield-calculator.md  06-vault-contract.md  07-deposit-locking-service.md  08-timer-yield-product.md  09-leaderboard.md
docs/done/: 01-summary.md  02-lesson-api.md  02-summary.md  03-fuel.md  05-yield-calculator.md  06-vault-contract.md  07-deposit-locking-service.md  08-timer-yield-product.md  09-leaderboard.md  2026-03-04-wallet-connection-design.md  README.md
programs/yield_splitter/: Cargo.toml
programs/yield_splitter/src/: lib.rs
scripts/: init-yield-splitter-protocol.mjs
src/components/: AnimatedSplash.tsx  DungeonProvider.tsx
src/data/: mockCourses.ts
src/navigation/: AppNavigator.tsx  AuthStack.tsx  MainStack.tsx  MainTabs.tsx  OnboardingStack.tsx  index.ts  types.ts
src/stores/: brewStore.ts  courseStore.ts  flameStore.ts  index.ts  resurfaceStore.ts  sceneStore.ts  storage.ts  streakStore.ts  (+3 more)
(+75 files in other folders)
